Final stage is completed... No new requirement...!

--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@android:color/white"
     tools:context="nfl.sports.creedglobal.com.forwardpass.Pay">
     <ScrollView
         android:layout_width="fill_parent"
@@ -21,12 +22,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingLeft="10dp"
                 android:orientation="horizontal"
                 android:background="@drawable/abc_textfield_search_default_mtrl_alpha">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:text="Select an option to pay :  "
+                    android:text="Amount to pay :  "
                     android:id="@+id/textView"
 
                     android:layout_column="0"
@@ -46,29 +48,43 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Debit Card"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:textSize="20dp" />
+                    android:paddingBottom="30dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="select option to pay "
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textSize="20dp" />
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Card No."
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="18dp" />
+                    <Spinner
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:entries="@array/selectbank"
+                        android:id="@+id/selectbank"
+                        android:layout_gravity="left" />
+                </LinearLayout>
+
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Card No."-->
+                    <!--android:layout_marginTop="10dp"-->
+                    <!--android:layout_marginLeft="10dp"-->
+                    <!--android:textSize="18dp" />-->
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:background="@drawable/box_border"
                     android:inputType="number"
                     android:maxLength="16"
-                    android:hint="16-digit card number"
+                    android:hint=" card number"
                     android:layout_margin="10dp"
                     android:id="@+id/cardedt" />
 
@@ -120,16 +136,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="CVV"
-                    android:layout_marginTop="20dp"
-                    android:textSize="20dp"
-                    android:layout_marginLeft="10dp"/></LinearLayout>
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="CVV"-->
+                    <!--android:layout_marginTop="20dp"-->
+                    <!--android:textSize="20dp"-->
+                    <!--android:layout_marginLeft="10dp"/>-->
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="10dp"
                 android:orientation="horizontal">
                 <EditText
                     android:layout_width="90dp"
@@ -140,7 +158,7 @@
                     android:inputType="number"
 
                     android:maxLength="3"
-                    android:hint="CVV"
+                    android:hint=" CVV"
                     android:id="@+id/cvv" />
 
 
@@ -150,15 +168,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="If your maestro card doesnot have Expiry Date/CVV,skip these fields."
-                    android:layout_marginTop="20dp"
-                    android:textSize="15dp"
-                    android:layout_marginLeft="10dp"/>
-            </LinearLayout>
+                android:orientation="horizontal"></LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -191,12 +201,11 @@
                     android:textSize="20dp"
                     android:background="@color/colorPrimaryDark"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="5dp"
                     android:textColor="#ffffff"
-                    android:onClick="logout" />
+                     />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
