--- a/app/src/main/res/drawable/bot_border.xml
+++ b/app/src/main/res/drawable/bot_border.xml
@@ -5,9 +5,9 @@
             <solid android:color="@color/colorAccent" />
         </shape>
     </item>
-    <item android:bottom="4dp">
+    <item android:bottom="6dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@android:color/transparent" />
         </shape>
     </item>
 </layer-list>
