--- a/app/src/main/res/drawable/right_border.xml
+++ b/app/src/main/res/drawable/right_border.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/colorAccent" />
         </shape>
     </item>
-    <item android:right="1dp">
+    <item android:right="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
 </layer-list>
