--- a/app/src/main/res/layout/players.xml
+++ b/app/src/main/res/layout/players.xml
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:showDividers="end"
-    android:divider="@color/colorAccent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:divider="@color/colorAccent"
+    android:orientation="horizontal"
+    android:showDividers="end">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/postxt"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:text="POS"
-            android:id="@+id/postxt"
-            android:textColor="@color/textdefault"
-            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:layout_weight="1"
+            android:background="@drawable/box_border"
             android:gravity="center_horizontal"
-            android:background="@drawable/box_border" />
+            android:text="POS"
+            android:textColor="@color/textdefault" />
         <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="rank"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="rank"-->
 
-            <!--android:id="@+id/rank"-->
-            <!--android:textColor="@android:color/black"-->
-            <!--android:textSize="15sp"-->
-            <!--android:minWidth="20dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center_horizontal" />-->
+        <!--android:id="@+id/rank"-->
+        <!--android:textColor="@android:color/black"-->
+        <!--android:textSize="15sp"-->
+        <!--android:minWidth="20dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:gravity="center_horizontal" />-->
 
         <LinearLayout
             android:layout_width="0dip"
@@ -43,39 +43,72 @@
             android:background="@drawable/box_border">
 
             <ImageView
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
                 android:id="@+id/teamicon"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/team1" />
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:text="Offense"
-                android:id="@+id/offensetxt"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/postxt"
-                android:layout_toEndOf="@+id/postxt"
-                android:layout_weight="3"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark" />
+                android:layout_weight="3">
+
+                <TextView
+                    android:id="@+id/offensetxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Offense"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/playerpostxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:textSize="10dp"
+                        android:text="pos"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                        android:textColor="#70000000" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="  -  "
+                        android:textColor="#70000000"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/playerteamtxt"
+                        android:textSize="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="team"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                        android:textColor="#70000000" />
+                </LinearLayout>
+            </RelativeLayout>
+
         </LinearLayout>
 
 
         <TextView
+            android:id="@+id/fantasytxt"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:text="Fantasy Points"
-            android:id="@+id/fantasytxt"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/offensetxt"
             android:layout_toEndOf="@+id/offensetxt"
+            android:layout_toRightOf="@+id/offensetxt"
             android:layout_weight="1"
-            android:textColor="@color/textdefault"
+            android:background="@drawable/box_border"
             android:gravity="right"
             android:paddingRight="15dp"
-            android:background="@drawable/box_border" />
+            android:text="Fantasy Points"
+            android:textColor="@color/textdefault" />
     </LinearLayout>
 
 </RelativeLayout>
