--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="40dp"
     android:orientation="horizontal"
     android:background="@color/colorPrimary"
     android:divider="@color/colorAccent"
-    android:elevation="8dp">
-
-    <TextView
+    android:elevation="5dp">
+    <Button
         android:layout_width="0dip"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_weight="1"
         android:text="Scoreboard"
         android:id="@+id/scoretxt"
         android:gravity="center"
         android:textColor="@android:color/white"
-        android:onClick="gotoScoreboard" />
+        android:onClick="gotoScoreboard"
+        android:background="@color/colorPrimary" />
 
-    <TextView
+    <Button
         android:layout_width="0dip"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_weight="1"
         android:text="Teams"
         android:id="@+id/teamstxt"
         android:gravity="center"
         android:textColor="@android:color/white"
-        android:onClick="gotoTeam" />
+        android:onClick="gotoTeam"
+        android:background="@color/colorPrimary" />
 </LinearLayout>
